Huge cleanup refactoring, remove androMda, move groovy scripts, remove unused classes and files, remove remnants of R connectivity, refactor DesigElement services and DAO, refactor outlier detection and cormat computation, etc.