@@ -20,21 +20,15 @@
         <module>gemma-web</module>
     </modules>
     <packaging>pom</packaging>
-    <scm>
-        <connection>scm:cvs:ext:@otto.pavlab.chibi.ubc.ca:/cvs:Gemma</connection>
-        <developerConnection>scm:cvs:ext:@otto.pavlab.chibi.ubc.ca:/cvs:Gemma</developerConnection>
-        <url>http://www.chibi.ubc.ca/faculty/pavlidis/fisheye/browse/pavlab/Gemma</url>
-        <tag>gemma-1_7</tag>
-    </scm>
     <issueManagement>
-        <system>Bugzilla</system>
+        <system>GitHub</system>
         <url>
-            http://chibi.ubc.ca/faculty/pavlidis/lab/bugs/buglist.cgi?product=Gemma&amp;bug_status=__open__
+            https://github.com/PavlidisLab/Gemma/issues
         </url>
     </issueManagement>
     <ciManagement>
-        <system>bamboo</system>
-        <url>http://chibi.ubc.ca/faculty/pavlidis/bamboo</url>
+        <system>Jenkins</system>
+        <url>https://jenkins.pavlab.msl.ubc.ca</url>
     </ciManagement>
     <licenses>
         <license>
@@ -68,6 +62,11 @@
         <developer>
             <name>Matthew Jacobson</name>
             <id>jacobsonmt</id>
+            <organization>University of British Columbia</organization>
+        </developer>
+        <developer>
+            <name>Stepan Tesar</name>
+            <id>tesarst</id>
             <organization>University of British Columbia</organization>
         </developer>
     </developers>
@@ -273,18 +272,6 @@
             <version>1.2.14</version>
             <type>jar</type>
         </dependency>
-        <!--<dependency>
-            <groupId>org.slf4j</groupId>
-            <artifactId>slf4j-api</artifactId>
-            <version>1.6.6</version>
-            <type>jar</type>
-        </dependency>
-        <dependency>
-            <groupId>org.slf4j</groupId>
-            <artifactId>slf4j-log4j12</artifactId>
-            <version>1.6.6</version>
-            <type>jar</type>
-        </dependency>-->
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
@@ -433,19 +420,6 @@
                                 </configuration>
                             </configuration>
                         </plugin>
-                        <!-- <plugin> <groupId>org.apache.maven.plugins</groupId> <artifactId>maven-surefire-report-plugin</artifactId> <version>2.14.1</version>
-                            <configuration> <argLine>-Xmx1.2g -XX:MaxPermSize=512m</argLine> </configuration> </plugin> -->
-                        <!--						<plugin>
-                                                    <groupId>org.codehaus.mojo</groupId>
-                                                    <artifactId>cobertura-maven-plugin</artifactId>
-                                                    <version>2.5.2</version>
-                                                    <configuration>
-                                                        <aggregate>true</aggregate>
-                                                        <check>
-                                                            <haltOnFailure>false</haltOnFailure>
-                                                        </check>
-                                                    </configuration>
-                                                </plugin> -->
                         <plugin>
                             <groupId>org.codehaus.mojo</groupId>
                             <artifactId>jdepend-maven-plugin</artifactId>
